--- a/templates/index.html
+++ b/templates/index.html
@@ -1,52 +1,41 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html>
 
 <head>
-
-    <meta charset="UTF-8">
-
     <title>Grocery List</title>
-
+        
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css')}}">
+    
+    <script type="text/javascript" src="{{ url_for('static', filename='js/main.js')}}"></script>
 </head>
-
+    
 <body>
+        <!-- ADD LOGO -->
+        <div>
+            <img src="https://raw.githubusercontent.com/MariyaSha/groceriesList/main/logo_black.png" alt="grocery app logo">
+        </div>
 
-    <!-- REMOVE ITEMS FROM THE FORM -->
-    <div id="remove_items">
-        
-        <form action="/remove_items" method="post">
-        
-            {% for item in shopping_list %}
-        
-            <input type="checkbox" name="check" id="{{ item }}" value="{{ item }}">
-        
-            <label for="{{ item }}" name="{{ item }}">{{ item }}</label><br>
-        
-            {% endfor %}
+        <!-- REMOVE ITEMS FORM -->
+        <div id="remove_items">
+            <form action="/remove_items" method="POST">
+                {% for item in shopping_items%}
+                <input type="checkbox" name="check" id="{{item}}" value="{{item}}" onchange="check_me('{{ item }}')">
+                <label for="{{items}}" name="{{item}}">{{ item }}</label><br>
+                {% endfor %}
+                <input type="submit" value="CHECK ITEMS" id="remove_btn">
+            </form>
+        </div>
 
-            <input type="submit" value="REMOVE ITEMS">
-        
-        </form>
-
-    </div>
-
-    <!-- ADD ITEMS TO THE FORM -->
-    <form action="/add_items" method="POST">
-        
-        <select name="select_items">
-            
-            {% for item in execute_data %}
-            
-            <option value="{{ item }}">{{ item }}</option>
-            
-            {% endfor %}
-        
-        </select>
-
-        <input type="submit" value="ADD ITEM">
-    </form>
-
-</body>
-
+        <!-- ADD ITEMS FORM -->
+        <div id="add_item">
+            <form action="/add_items" method="POST">
+                <select name="select_items">
+                {% for item in all_items %}
+                <option value="{{ item }}">{{ item }}</option>
+                {% endfor %}
+                <input type="submit" value="ADD ITEM" id="add_btn">
+            </form>
+        </div>
+    </body>
 </html>
